Add HTTP authentication based on the "Accept" header
It may be desirable in certain cases to only perform OpenID Connect
based authentication in case users visit a page through the web browser.
For non-interactive API access it may be desirable to return HTTP 401
instead.

This change solves this by adding a decorator for Authenticator that can
conditionalize its invocation based on whether a supported media type is
provided.

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -221,6 +221,15 @@ gomock(
 )
 
 gomock(
+    name = "http",
+    out = "http.go",
+    interfaces = ["Authenticator"],
+    library = "//pkg/http",
+    mock_names = {"Authenticator": "MockHTTPAuthenticator"},
+    package = "mock",
+)
+
+gomock(
     name = "jwt",
     out = "jwt.go",
     interfaces = [
@@ -304,6 +313,7 @@ go_library(
         "filesystem_path.go",
         "grpc.go",
         "grpc_go.go",
+        "http.go",
         "jwt.go",
         "random.go",
         "redis.go",
