--- a/pkg/jwt/BUILD.bazel
+++ b/pkg/jwt/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
         "ed25519_signature_validator.go",
         "generate_authorization_header.go",
         "hmac_sha_signature_validator.go",
+        "jwks_signature_validator.go",
         "rsa_sha_signature_validator.go",
         "signature_generator.go",
         "signature_validator.go",
@@ -23,9 +24,11 @@ go_library(
         "//pkg/proto/configuration/jwt",
         "//pkg/random",
         "//pkg/util",
+        "@com_github_go_jose_go_jose_v3//:go-jose",
         "@com_github_jmespath_go_jmespath//:go-jmespath",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
+        "@org_golang_google_protobuf//encoding/protojson",
     ],
 )
 
@@ -38,6 +41,7 @@ go_test(
         "ed25519_signature_validator_test.go",
         "generate_authorization_header_test.go",
         "hmac_sha_signature_validator_test.go",
+        "jwks_signature_validator_test.go",
         "rsa_sha_signature_validator_test.go",
     ],
     deps = [
