Make JWKS a oneoff with either inline or file content
This changes the jwt.proto definition to take either an inline JWKS
struct, or a message containing a file path and a refresh interval.

The intention is that when a file path and refresh interval is provided,
we create a ForwardingSignatureValidator, and periodically update its internal
SignatureValidator with content from the referenced file.

When passing inline content, behavior should remain unchanged.

--- a/pkg/proto/configuration/jwt/BUILD.bazel
+++ b/pkg/proto/configuration/jwt/BUILD.bazel
@@ -8,6 +8,7 @@ proto_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/proto/configuration/eviction:eviction_proto",
+        "@com_google_protobuf//:duration_proto",
         "@com_google_protobuf//:struct_proto",
     ],
 )
