Integrate logo in otel

--- a/pkg/logo/BUILD.bazel
+++ b/pkg/logo/BUILD.bazel
@@ -12,9 +12,7 @@ genrule(
 go_library(
     name = "logo",
     srcs = ["logo.go"],
-    embedsrcs = [
-        "favicon.svg",
-    ],
+    embedsrcs = ["favicon.svg"],
     importpath = "github.com/buildbarn/bb-storage/pkg/logo",
     visibility = ["//visibility:public"],
 )
