--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -241,6 +241,15 @@ gomock(
 )
 
 gomock(
+    name = "prometheus",
+    out = "prometheus.go",
+    interfaces = ["Gatherer"],
+    library = "@com_github_prometheus_client_golang//prometheus",
+    mock_names = {"Gatherer": "MockPrometheusGatherer"},
+    package = "mock",
+)
+
+gomock(
     name = "random",
     out = "random.go",
     interfaces = ["ThreadSafeGenerator"],
@@ -312,6 +321,7 @@ go_library(
         "grpc_go.go",
         "http.go",
         "jwt.go",
+        "prometheus.go",
         "random.go",
         "remoteexecution.go",
         "trace.go",
@@ -341,6 +351,7 @@ go_library(
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@com_github_golang_mock//gomock",
         "@com_github_google_uuid//:uuid",
+        "@com_github_prometheus_client_model//go",
         "@com_google_cloud_go_longrunning//autogen/longrunningpb",
         "@io_opentelemetry_go_otel//attribute",
         "@io_opentelemetry_go_otel//codes",
