Upgrade all Go dependencies
What's really annoying about the latest version of OpenTelemetry is that
they've redefined the Span, Tracer and TracerProvider interfaces to
contain private methods, so that you no longer have the ability to fully
implement them yourself. This is done to provide gradual forward
compatibility, but I don't buy it. In my case I want to get explicit
build failures, so that I know I need to extend my implementations.

Solve this by explicitly embedding embedded.* into our types. For gomock
we now need to declare our very own wrappers. Very annoying.

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -268,6 +268,11 @@ gomock(
         "TracerProvider",
     ],
     library = "@io_opentelemetry_go_otel_trace//:trace",
+    mock_names = {
+        "Span": "BareMockSpan",
+        "Tracer": "BareMockTracer",
+        "TracerProvider": "BareMockTracerProvider",
+    },
     package = "mock",
 )
 
@@ -310,6 +315,7 @@ go_library(
         "random.go",
         "remoteexecution.go",
         "trace.go",
+        "trace_wrap.go",
         "util.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/internal/mock",
@@ -339,6 +345,7 @@ go_library(
         "@io_opentelemetry_go_otel//attribute",
         "@io_opentelemetry_go_otel//codes",
         "@io_opentelemetry_go_otel_trace//:trace",
+        "@io_opentelemetry_go_otel_trace//embedded",
         "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//metadata",
         "@org_golang_google_protobuf//encoding/protowire",
