Add a helper function for traversing topologically sorted trees

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -6,6 +6,7 @@ gomock(
     out = "aliases.go",
     interfaces = [
         "AEAD",
+        "IntTreeDirectoryVisitor",
         "ReadCloser",
         "ResponseWriter",
         "RoundTripper",
