--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -23,6 +23,7 @@ go_library(
         "read_canarying_blob_access.go",
         "reference_expanding_blob_access.go",
         "validation_caching_read_buffer_factory.go",
+        "visit_topologically_sorted_tree.go",
         "zip_reading_blob_access.go",
         "zip_writing_blob_access.go",
     ],
@@ -68,6 +69,7 @@ go_test(
         "read_canarying_blob_access_test.go",
         "reference_expanding_blob_access_test.go",
         "validation_caching_read_buffer_factory_test.go",
+        "visit_topologically_sorted_tree_test.go",
         "zip_reading_blob_access_test.go",
         "zip_writing_blob_access_test.go",
     ],
@@ -87,6 +89,8 @@ go_test(
         "@com_github_stretchr_testify//require",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
+        "@org_golang_google_protobuf//encoding/protowire",
+        "@org_golang_google_protobuf//proto",
         "@org_golang_google_protobuf//types/known/timestamppb",
     ],
 )
