--- a/pkg/util/BUILD.bazel
+++ b/pkg/util/BUILD.bazel
@@ -7,17 +7,15 @@ go_library(
         "error_logger.go",
         "jsonnet.go",
         "non_empty_stack.go",
+        "pem.go",
         "proto.go",
         "semaphore.go",
         "status.go",
-        "tls.go",
-        "tls_certificate.go",
         "uuid.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/util",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/proto/configuration/tls",
         "@com_github_google_go_jsonnet//:go-jsonnet",
         "@com_github_google_uuid//:uuid",
         "@com_github_prometheus_client_golang//prometheus",
@@ -36,13 +34,10 @@ go_test(
     srcs = [
         "buckets_test.go",
         "proto_test.go",
-        "tls_certificate_test.go",
-        "tls_test.go",
     ],
     deps = [
         ":util",
         "//internal/mock",
-        "//pkg/proto/configuration/tls",
         "//pkg/testutil",
         "@com_github_golang_mock//gomock",
         "@com_github_stretchr_testify//require",
