add the rest of the remaining SPIFFE stuff

--- a/pkg/auth/BUILD.bazel
+++ b/pkg/auth/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
         "authorizer.go",
         "authorizer_factory.go",
         "jmespath_expression_authorizer.go",
+        "spiffe_authorizer.go",
         "static_authorizer.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/auth",
@@ -19,8 +20,11 @@ go_library(
         "//pkg/proto/configuration/auth",
         "//pkg/util",
         "@com_github_jmespath_go_jmespath//:go-jmespath",
+        "@com_github_spiffe_go_spiffe_v2//svid/x509svid",
         "@io_opentelemetry_go_otel//attribute",
         "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//credentials",
+        "@org_golang_google_grpc//peer",
         "@org_golang_google_grpc//status",
         "@org_golang_google_protobuf//encoding/protojson",
         "@org_golang_google_protobuf//proto",
