--- a/pkg/global/BUILD.bazel
+++ b/pkg/global/BUILD.bazel
@@ -4,6 +4,11 @@ go_library(
     name = "global",
     srcs = [
         "apply_configuration.go",
+        "resource_limits_darwin.go",
+        "resource_limits_freebsd.go",
+        "resource_limits_linux.go",
+        "resource_limits_nonunix.go",
+        "resource_limits_unix.go",
         "umask_nonunix.go",
         "umask_unix.go",
     ],
@@ -36,5 +41,27 @@ go_library(
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
-    ],
+    ] + select({
+        "@io_bazel_rules_go//go/platform:android": [
+            "@org_golang_google_protobuf//types/known/wrapperspb",
+            "@org_golang_x_sys//unix",
+        ],
+        "@io_bazel_rules_go//go/platform:darwin": [
+            "@org_golang_google_protobuf//types/known/wrapperspb",
+            "@org_golang_x_sys//unix",
+        ],
+        "@io_bazel_rules_go//go/platform:freebsd": [
+            "@org_golang_google_protobuf//types/known/wrapperspb",
+            "@org_golang_x_sys//unix",
+        ],
+        "@io_bazel_rules_go//go/platform:ios": [
+            "@org_golang_google_protobuf//types/known/wrapperspb",
+            "@org_golang_x_sys//unix",
+        ],
+        "@io_bazel_rules_go//go/platform:linux": [
+            "@org_golang_google_protobuf//types/known/wrapperspb",
+            "@org_golang_x_sys//unix",
+        ],
+        "//conditions:default": [],
+    }),
 )
