--- a/.bazelrc
+++ b/.bazelrc
@@ -1,2 +1,6 @@
 build --host_cxxopt=-std=c++17
 run --workspace_status_command="bash tools/workspace-status.sh"
+
+# NB: `rules_docker` is deprecated and has limited support for Bazel7.
+# This flag is required for the images to build.
+build --@io_bazel_rules_docker//transitions:enable=false
