Refactor to resolve with path.Parser
This prepares for platform specific paths.

--- a/pkg/filesystem/path/BUILD.bazel
+++ b/pkg/filesystem/path/BUILD.bazel
@@ -9,10 +9,12 @@ go_library(
         "component_walker.go",
         "components_list.go",
         "loop_detecting_scope_walker.go",
+        "parser.go",
         "relative_scope_walker.go",
         "resolve.go",
         "scope_walker.go",
         "trace.go",
+        "unix_parser.go",
         "virtual_root_scope_walker_factory.go",
         "void_component_walker.go",
         "void_scope_walker.go",
