add blobaccess for Spanner/GCS

--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -21,6 +21,7 @@ go_library(
         "read_buffer_factory.go",
         "read_canarying_blob_access.go",
         "reference_expanding_blob_access.go",
+        "spanner_blob_access.go",
         "validation_caching_read_buffer_factory.go",
         "visit_topologically_sorted_tree.go",
         "zip_reading_blob_access.go",
@@ -38,6 +39,7 @@ go_library(
         "//pkg/cloud/gcp",
         "//pkg/digest",
         "//pkg/eviction",
+        "//pkg/proto/configuration/blobstore",
         "//pkg/proto/fsac",
         "//pkg/proto/icas",
         "//pkg/proto/iscc",
@@ -47,6 +49,11 @@ go_library(
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
         "@com_github_klauspost_compress//zstd",
         "@com_github_prometheus_client_golang//prometheus",
+        "@com_google_cloud_go_spanner//:spanner",
+        "@com_google_cloud_go_spanner//admin/database/apiv1",
+        "@com_google_cloud_go_storage//:storage",
+        "@org_golang_google_api//iterator",
+        "@org_golang_google_genproto//googleapis/spanner/admin/database/v1:database",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
         "@org_golang_google_protobuf//encoding/protowire",
