Make more preparations for supporting Windows paths natively
- Add a NewLocalParser(), which constructs a parser for paths accepted
  by the local operating system. Right now we just provide a stub
  implementation around the UNIX parser that calls filepath.ToSlash().
  Eventually we should have a NewWindowsParser().

- Add a GetLocalString(), which returns a string representation of a
  path that is accepted by the local file system. Similar to the above,
  it is a stub around filepath.FromSlash().

- Rename Builder.String() and Trace.String() to GetUNIXString().
  Eventually we should gain a GetWindowsString().

- While there, extend Builder to implement the Parser interface. This
  makes it easy to replay walking of previously parsed paths. This
  prevents the need for silly constructions such as
  NewUNIXParser(builder.GetUNIXString()).

--- a/pkg/filesystem/path/BUILD.bazel
+++ b/pkg/filesystem/path/BUILD.bazel
@@ -8,11 +8,14 @@ go_library(
         "component.go",
         "component_walker.go",
         "components_list.go",
+        "local_unix.go",
+        "local_windows.go",
         "loop_detecting_scope_walker.go",
         "parser.go",
         "relative_scope_walker.go",
         "resolve.go",
         "scope_walker.go",
+        "stringer.go",
         "trace.go",
         "unix_parser.go",
         "virtual_root_scope_walker_factory.go",
