--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -21,7 +21,7 @@ go_library(
         "read_buffer_factory.go",
         "read_canarying_blob_access.go",
         "reference_expanding_blob_access.go",
-        "spanner_blob_access.go",
+        "spanner_gcs_blob_access.go",
         "validation_caching_read_buffer_factory.go",
         "visit_topologically_sorted_tree.go",
         "zip_reading_blob_access.go",
