--- a/cmd/bb_replicator/BUILD.bazel
+++ b/cmd/bb_replicator/BUILD.bazel
@@ -1,7 +1,5 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
-load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index")
-load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
-load("//tools:container.bzl", "container_push_official")
+load("//tools:container.bzl", "container_push_official", "multiarch_go_image")
 
 go_library(
     name = "bb_replicator_lib",
@@ -23,43 +21,16 @@ go_library(
     ],
 )
 
-[
-    go_binary(
-        name = "bb_replicator-{}".format(goarch),
-        embed = [":bb_replicator_lib"],
-        pure = "on",
-        goarch = goarch,
-        goos = "linux",
-        visibility = ["//visibility:public"],
-    )
-    for goarch in ["amd64", "arm64"]
-]
+go_binary(
+    name = "bb_replicator",
+    embed = [":bb_replicator_lib"],
+    pure = "on",
+    visibility = ["//visibility:public"],
+)
 
-[
-    pkg_tar(
-        name = "tar-{}".format(goarch),
-        srcs = ["bb_replicator-{}".format(goarch)],
-        package_dir = "/app/cmd/bb_storage",
-    )
-    for goarch in ["amd64", "arm64"]
-]
-
-[
-    oci_image(
-        name = "image-{}".format(goarch),
-        base = "@distroless_static",
-        entrypoint = ["/app/cmd/bb_storage/bb_replicator-{}".format(goarch)],
-        tars = ["tar-{}".format(goarch)],
-    )
-    for goarch in ["amd64", "arm64"]
-]
-
-oci_image_index(
+multiarch_go_image(
     name = "bb_replicator_container",
-    images = [
-        ":image-arm64",
-        ":image-amd64",
-    ],
+    binary = ":bb_replicator",
 )
 
 container_push_official(
