--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -53,6 +53,7 @@ go_library(
         "@com_google_cloud_go_spanner//admin/database/apiv1",
         "@com_google_cloud_go_storage//:storage",
         "@org_golang_google_api//iterator",
+        "@org_golang_google_api//option",
         "@org_golang_google_genproto//googleapis/spanner/admin/database/v1:database",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
