CI: Automatically derive the version of Bazel to use
Right now we hardcode 6.0.0 in there, even though we already have it
specified in .bazelversion in the root of the repository.

--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -4,12 +4,12 @@
          "runs-on": "ubuntu-latest",
          "steps": [
             {
-               "name": "Installing Bazel",
-               "run": "curl -L https://github.com/bazelbuild/bazel/releases/download/6.0.0/bazel-6.0.0-linux-x86_64 > ~/bazel && chmod +x ~/bazel && echo ~ >> ${GITHUB_PATH}"
-            },
-            {
                "name": "Check out source code",
                "uses": "actions/checkout@v1"
+            },
+            {
+               "name": "Installing Bazel",
+               "run": "v=$(cat .bazelversion) && curl -L https://github.com/bazelbuild/bazel/releases/download/${v}/bazel-${v}-linux-x86_64 > ~/bazel && chmod +x ~/bazel && echo ~ >> ${GITHUB_PATH}"
             },
             {
                "name": "Gazelle",
