--- a/cmd/bb_copy/BUILD.bazel
+++ b/cmd/bb_copy/BUILD.bazel
@@ -1,6 +1,5 @@
-load("//tools:container.bzl", "container_push_official")
-load("@io_bazel_rules_docker//go:image.bzl", "go_image")
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("//tools:container.bzl", "container_push_official", "multiarch_go_image")
 
 go_library(
     name = "bb_copy_lib",
@@ -27,11 +26,9 @@ go_binary(
     visibility = ["//visibility:public"],
 )
 
-go_image(
+multiarch_go_image(
     name = "bb_copy_container",
-    embed = [":bb_copy_lib"],
-    pure = "on",
-    visibility = ["//visibility:public"],
+    binary = ":bb_copy",
 )
 
 container_push_official(
