--- a/cmd/bb_storage/BUILD.bazel
+++ b/cmd/bb_storage/BUILD.bazel
@@ -1,6 +1,5 @@
-load("//tools:container.bzl", "container_push_official")
-load("@io_bazel_rules_docker//go:image.bzl", "go_image")
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("//tools:container.bzl", "container_push_official", "multiarch_go_image")
 
 go_library(
     name = "bb_storage_lib",
@@ -37,11 +36,9 @@ go_binary(
     visibility = ["//visibility:public"],
 )
 
-go_image(
+multiarch_go_image(
     name = "bb_storage_container",
-    embed = [":bb_storage_lib"],
-    pure = "on",
-    visibility = ["//visibility:public"],
+    binary = ":bb_storage",
 )
 
 container_push_official(
