--- a/tools/BUILD.bazel
+++ b/tools/BUILD.bazel
@@ -18,7 +18,7 @@ go_library(
 expand_template(
     name = "stamped_tags",
     out = "_stamped.tags.txt",
-    stamp_substitutions = {"_TAG_": "{BUILD_SCM_TIMESTAMP}-{BUILD_SCM_REVISION}"},
+    stamp_substitutions = {"_TAG_": "{{BUILD_SCM_TIMESTAMP}}-{{BUILD_SCM_REVISION}}"},
     substitutions = {"_TAG_": "0.0.0"},
     template = ["_TAG_"],
     visibility = ["//visibility:public"],
