--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -4,6 +4,7 @@ load("@npm//:defs.bzl", "npm_link_all_packages")
 
 # gazelle:go_grpc_compilers @rules_go//proto:go_grpc
 # gazelle:prefix github.com/buildbarn/bb-storage
+# gazelle:resolve go github.com/google/go-jsonnet @google_jsonnet_go//:go_default_library
 # gazelle:resolve proto build/bazel/remote/execution/v2/remote_execution.proto @com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_proto
 # gazelle:resolve proto go build/bazel/remote/execution/v2/remote_execution.proto @com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution
 # gazelle:resolve proto go google/bytestream/bytestream.proto @org_golang_google_genproto_googleapis_bytestream//:bytestream
