--- a/pkg/util/BUILD.bazel
+++ b/pkg/util/BUILD.bazel
@@ -18,9 +18,9 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/proto/configuration/tls",
-        "@com_github_google_go_jsonnet//:go-jsonnet",
         "@com_github_google_uuid//:uuid",
         "@com_github_prometheus_client_golang//prometheus",
+        "@google_jsonnet_go//:go_default_library",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
         "@org_golang_google_protobuf//encoding/protojson",
