--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -28,43 +28,6 @@ go_sdk.download(version = "1.22.1")
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
-go_deps.gazelle_override(
-    build_file_generation = "on",
-    directives = [
-        "gazelle:resolve proto go build/bazel/semver/semver.proto //build/bazel/semver",
-        "gazelle:resolve proto go google/api/annotations.proto @org_golang_google_genproto_googleapis_api//annotations",
-        "gazelle:resolve proto go google/longrunning/operations.proto @com_google_cloud_go_longrunning//autogen/longrunningpb",
-        "gazelle:resolve proto go google/rpc/status.proto @org_golang_google_genproto_googleapis_rpc//status",
-        "gazelle:resolve proto google/api/annotations.proto @googleapis//google/api:annotations_proto",
-        "gazelle:resolve proto google/longrunning/operations.proto @googleapis//google/longrunning:operations_proto",
-        "gazelle:resolve proto google/rpc/status.proto @googleapis//google/rpc:status_proto",
-    ],
-    path = "github.com/bazelbuild/remote-apis",
-)
-go_deps.module_override(
-    patches = ["//:patches/com_github_golang_mock/mocks-for-funcs.diff"],
-    path = "github.com/golang/mock",
-)
-go_deps.module_override(
-    patches = ["//:patches/com_github_golang_protobuf/service-registrar.diff"],
-    path = "github.com/golang/protobuf",
-)
-go_deps.module_override(
-    patches = ["//:patches/com_github_grpc_ecosystem_go_grpc_prometheus/client-metrics-prevent-handled-twice.diff"],
-    path = "github.com/grpc-ecosystem/go-grpc-prometheus",
-)
-go_deps.module_override(
-    patches = ["//:patches/org_golang_google_genproto_googleapis_bytestream/service-registrar.diff"],
-    path = "google.golang.org/genproto/googleapis/bytestream",
-)
-go_deps.module_override(
-    patches = ["//:patches/org_golang_x_lint/generic.diff"],
-    path = "golang.org/x/lint",
-)
-go_deps.module_override(
-    patches = ["//:patches/org_golang_x_oauth2/injectable-clock.diff"],
-    path = "golang.org/x/oauth2",
-)
 use_repo(
     go_deps,
     "cc_mvdan_gofumpt",
@@ -110,6 +73,45 @@ use_repo(
     "org_golang_x_oauth2",
     "org_golang_x_sync",
     "org_golang_x_sys",
+)
+
+go_deps_dev = use_extension("@gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
+go_deps_dev.gazelle_override(
+    build_file_generation = "on",
+    directives = [
+        "gazelle:resolve proto go build/bazel/semver/semver.proto //build/bazel/semver",
+        "gazelle:resolve proto go google/api/annotations.proto @org_golang_google_genproto_googleapis_api//annotations",
+        "gazelle:resolve proto go google/longrunning/operations.proto @com_google_cloud_go_longrunning//autogen/longrunningpb",
+        "gazelle:resolve proto go google/rpc/status.proto @org_golang_google_genproto_googleapis_rpc//status",
+        "gazelle:resolve proto google/api/annotations.proto @googleapis//google/api:annotations_proto",
+        "gazelle:resolve proto google/longrunning/operations.proto @googleapis//google/longrunning:operations_proto",
+        "gazelle:resolve proto google/rpc/status.proto @googleapis//google/rpc:status_proto",
+    ],
+    path = "github.com/bazelbuild/remote-apis",
+)
+go_deps_dev.module_override(
+    patches = ["//:patches/com_github_golang_mock/mocks-for-funcs.diff"],
+    path = "github.com/golang/mock",
+)
+go_deps_dev.module_override(
+    patches = ["//:patches/com_github_golang_protobuf/service-registrar.diff"],
+    path = "github.com/golang/protobuf",
+)
+go_deps_dev.module_override(
+    patches = ["//:patches/com_github_grpc_ecosystem_go_grpc_prometheus/client-metrics-prevent-handled-twice.diff"],
+    path = "github.com/grpc-ecosystem/go-grpc-prometheus",
+)
+go_deps_dev.module_override(
+    patches = ["//:patches/org_golang_google_genproto_googleapis_bytestream/service-registrar.diff"],
+    path = "google.golang.org/genproto/googleapis/bytestream",
+)
+go_deps_dev.module_override(
+    patches = ["//:patches/org_golang_x_lint/generic.diff"],
+    path = "golang.org/x/lint",
+)
+go_deps_dev.module_override(
+    patches = ["//:patches/org_golang_x_oauth2/injectable-clock.diff"],
+    path = "golang.org/x/oauth2",
 )
 
 http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
