Make LLVM a dev dependency
It can apparently only be used in the root module. We also only need it
for doing some clang-formatting.

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -145,7 +145,7 @@ proto_library(
     urls = ["https://github.com/open-telemetry/opentelemetry-proto/archive/refs/tags/v0.19.0.tar.gz"],
 )
 
-llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
+llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
 llvm.toolchain(
     llvm_version = "14.0.0",
 )
