--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2,7 +2,7 @@ load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
 load("@com_github_buildbarn_bb_storage_npm//:defs.bzl", "npm_link_all_packages")
 load("@gazelle//:def.bzl", "gazelle")
 
-# gazelle:go_grpc_compilers @rules_go//proto:go_grpc
+# gazelle:go_grpc_compilers @rules_go//proto:go_proto,@rules_go//proto:go_grpc_v2
 # gazelle:prefix github.com/buildbarn/bb-storage
 # gazelle:resolve go github.com/google/go-jsonnet @google_jsonnet_go//:go_default_library
 # gazelle:resolve proto build/bazel/remote/execution/v2/remote_execution.proto @com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_proto
