--- a/pkg/proto/icas/BUILD.bazel
+++ b/pkg/proto/icas/BUILD.bazel
@@ -11,7 +11,10 @@ proto_library(
 
 go_proto_library(
     name = "icas_go_proto",
-    compilers = ["@rules_go//proto:go_grpc"],
+    compilers = [
+        "@rules_go//proto:go_proto",
+        "@rules_go//proto:go_grpc_v2",
+    ],
     importpath = "github.com/buildbarn/bb-storage/pkg/proto/icas",
     proto = ":icas_proto",
     visibility = ["//visibility:public"],
