--- a/pkg/proto/iscc/BUILD.bazel
+++ b/pkg/proto/iscc/BUILD.bazel
@@ -16,7 +16,10 @@ proto_library(
 
 go_proto_library(
     name = "iscc_go_proto",
-    compilers = ["@rules_go//proto:go_grpc"],
+    compilers = [
+        "@rules_go//proto:go_proto",
+        "@rules_go//proto:go_grpc_v2",
+    ],
     importpath = "github.com/buildbarn/bb-storage/pkg/proto/iscc",
     proto = ":iscc_proto",
     visibility = ["//visibility:public"],
