--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -4,7 +4,7 @@ bazel_dep(name = "aspect_bazel_lib", version = "2.6.0")
 bazel_dep(name = "aspect_rules_js", version = "1.39.1")
 bazel_dep(name = "gazelle", version = "0.35.0")
 bazel_dep(name = "googleapis", version = "0.0.0-20240326-1c8d509c5")
-bazel_dep(name = "jsonnet_go", version = "0.20.0", repo_name = "google_jsonnet_go")
+bazel_dep(name = "jsonnet_go", version = "0.20.0")
 bazel_dep(name = "opentelemetry-proto", version = "1.1.0")
 bazel_dep(name = "protobuf", version = "23.1")
 bazel_dep(name = "rules_go", version = "0.46.0")
