Trace path traversal in Windows directory removal
To give better error messages for which file or directory operation
fails.

--- a/pkg/filesystem/BUILD.bazel
+++ b/pkg/filesystem/BUILD.bazel
@@ -51,6 +51,7 @@ go_library(
         ],
         "@rules_go//go/platform:windows": [
             "//pkg/filesystem/windowsext",
+            "//pkg/util",
             "@org_golang_google_grpc//codes",
             "@org_golang_google_grpc//status",
             "@org_golang_x_sys//windows",
