JWT: Add a signature generator for Ed25519
Ed25519 is arguably safer than ECDSA, because it doesn't depend on
randomly generated nonce values.

--- a/pkg/jwt/BUILD.bazel
+++ b/pkg/jwt/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
         "demultiplexing_signature_validator.go",
         "ecdsa_sha_signature_generator.go",
         "ecdsa_sha_signature_validator.go",
+        "ed25519_signature_generator.go",
         "ed25519_signature_validator.go",
         "forwarding_signature_validator.go",
         "generate_authorization_header.go",
@@ -40,6 +41,7 @@ go_test(
         "authorization_header_parser_test.go",
         "ecdsa_sha_signature_generator_test.go",
         "ecdsa_sha_signature_validator_test.go",
+        "ed25519_signature_generator_test.go",
         "ed25519_signature_validator_test.go",
         "generate_authorization_header_test.go",
         "hmac_sha_signature_validator_test.go",
