--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,17 +1,17 @@
 module(name = "com_github_buildbarn_bb_storage")
 
-bazel_dep(name = "aspect_bazel_lib", version = "2.6.0")
-bazel_dep(name = "aspect_rules_js", version = "1.39.1")
-bazel_dep(name = "gazelle", version = "0.35.0")
+bazel_dep(name = "aspect_bazel_lib", version = "2.7.8")
+bazel_dep(name = "aspect_rules_js", version = "1.42.3")
+bazel_dep(name = "gazelle", version = "0.37.0")
 bazel_dep(name = "googleapis", version = "0.0.0-20240326-1c8d509c5")
 bazel_dep(name = "jsonnet_go", version = "0.20.0")
-bazel_dep(name = "opentelemetry-proto", version = "1.1.0")
-bazel_dep(name = "protobuf", version = "23.1")
-bazel_dep(name = "rules_go", version = "0.46.0")
+bazel_dep(name = "opentelemetry-proto", version = "1.3.1")
+bazel_dep(name = "protobuf", version = "27.1")
+bazel_dep(name = "rules_go", version = "0.48.1")
 bazel_dep(name = "rules_jsonnet", version = "0.6.0")
-bazel_dep(name = "rules_oci", version = "1.7.5")
+bazel_dep(name = "rules_oci", version = "1.7.6")
 bazel_dep(name = "rules_pkg", version = "0.10.1")
-bazel_dep(name = "rules_proto", version = "6.0.0-rc2")
+bazel_dep(name = "rules_proto", version = "6.0.2")
 bazel_dep(name = "toolchains_llvm", version = "1.0.0")
 
 git_override(
@@ -26,7 +26,7 @@ git_override(
 )
 
 go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
-go_sdk.download(version = "1.22.1")
+go_sdk.download(version = "1.22.4")
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
